<resources>
    <string name="app_name">RemindMe</string>
    <string name="google_app_id">@string/google_api_key</string>
    <string name="appID">@string/app_id</string>
    <string name="confirmGeoFence">Please confirm you want to create this new geofence (overwrite any previous)</string>
    <string name="create_geo_button">Yes, create it</string>
    <string name="cancel_geo_button">No, cancel it</string>
    <string name="geo_state_active_msg">GeoFence has been activated</string>
    <string name="geo_state_deactive_msg">GeoFence has been deactivated</string>
    <string name="no_lists_to_display">Looks like you haven\'t created a list yet!\r\n What are you waiting for? \r\nLists are proven to be helpful.\r\n Click the plus sign to get started</string>
    <string name="no_reminders_to_display">Now that you created a list, all you need to do is add reminders to the list.\n\rClick the plus sign below to create a new reminder.</string>
    <string name='newListInstructions'>Let\'s create a new list.\r\nThe first step is to select an icon to represent the list.\r\nThe second step is to name the list</string>
    <string name="newListHint">Type your list\'s name here</string>
    <string name="selectIconInst">Select an icon for your list:</string>
    <string name="enterTitleInst">Enter a list title below:</string>
    <string name="calendar_clickToAddStartDate">Click here to add starting date</string>
    <string name="calendar_clickToAddStartTime">Click here to add starting time</string>
    <string name="calendar_clickToAddEndDate">Click here to add ending date</string>
    <string name="calendar_clickToAddEndTime">Click here to add ending time</string>
    <string name="tooltip_confirm">Got it!</string>
    <string name="tooltip_geofence">This is where you create a location reminder. Let\'s say you want to pick up eggs the next time you are near a supermarket. Create a location alarm, and when you are close to that location, a notification will appear</string>
    <string name="tooltip_task">Tip: To see more options for each task,click the blue bar on the right. It will give you options to add a location alarm, add an event in the calendar or delete</string>
    <string name="tooltip_dialog_title">Tool Tip</string>
    <string name="tooltip_dont_show_again">Don\'t show me this tip again</string>
    <string name="confirm_task_delete">Are you sure you want to delete this task?</string>
    <string name="deleteIt">Delete It</string>
    <string name="keepIt">Keep It</string>
</resources>
