<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:padding="http://schemas.android.com/tools"
              android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:text="@string/newListInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="23sp"
        android:textAlignment="center"
        />
    <TextView
        android:text="@string/selectIconInst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listOfIcons"
        android:layout_width="match_parent"
        android:layout_height="166dp"
        />
    <TextView
        android:text="@string/enterTitleInst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/addNameOfNewList_EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/newListHint"
        android:textColorHint="#555555"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:background="#AAA"/>






    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DONE"
        />
</LinearLayout>
</ScrollView>